--- a/app/js/app/partials/marketplace.html
+++ b/app/js/app/partials/marketplace.html
@@ -1,5 +1,6 @@
 <div class="row extrapadding section detail">
     <div class="col-xs-12 text-left">
+      <p><b><i>The marketplace is in very early beta. Don't assume anything will work correctly yet.</i></b></p>
         <h2 class="title">
           Addons
         </h2>
