--- a/app/js/app/partials/license.html
+++ b/app/js/app/partials/license.html
@@ -122,7 +122,7 @@
           <button ng-if="subscribing" class="btn btn-primary form-control" disabled="disabled">Processing...</button>
         </form>
       </div>
-      <div class="cancel-payment" ng-click="cancel()"><span class="icon-close"></span></div>
+      <div class="cancel-payment" ng-click="cancel()"><a href="javascript:void(0)"><span class="icon-close"></span></a></div>
     </div>
   </div>
 
