--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -2099,6 +2099,7 @@ body .single-step {
   .license-choices-wrapper {
     width: 100%;
     overflow: hidden;
+    padding: 0px 6px 50px 6px;
   }
 
   .license-choices-content-wrapper {
@@ -2298,4 +2299,12 @@ body .single-step {
 a.small-link {
     font-size: 12px;
     vertical-align: top;
+}
+
+.loading-icon {
+  display: none;
+}
+
+.loading-icon.active {
+  display: block;
 }
