--- a/app/js/app/partials/learn.html
+++ b/app/js/app/partials/learn.html
@@ -1,1 +1,4 @@
+<div style="width: 100px; height: 100px; margin: auto auto; margin-top: 23%;">
+  <img class="logo-icon rotating" src="content/imgs/OPengineLogoWhite.png" width="100" alt="..." style="margin-top: -5px;" />
+</div>
 <iframe src="http://docs.opengine.io" style="width:100%; height: 100%; border: 0; position: absolute;top: 0;left: 0;right: 0;bottom: 0;" />
