--- a/app/js/app/partials/login.html
+++ b/app/js/app/partials/login.html
@@ -14,7 +14,8 @@
                 <input type="text" ng-model="token" class="form-control" />
             </div>
             <div class="col-xs-3">
-                <a href="" ng-click="login()" class="btn btn-primary form-fill">Login</a>
+                <a href="javascript:void(0)" ng-click="login()" class="btn btn-primary form-fill">Login</a>
+                <a href="javascript:void(0)" class="btn btn-primary form-fill" disabled="disabled">Login</a>
             </div>
         </div>
         <br />
